<resources>
    <string name="app_name">Popular Movies</string>
    <string name="menu_sort_label">sort</string>
    <string name="loading_text">Loading</string>
    <string name="synopsis_text">Synopsis:</string>
    <string name="released_text">Released:</string>
    <string name="rating_text">Rating:</string>
    <string name="title_text">Title:</string>
    <string name="poster_text">Poster</string>
    <string name="popular_movies_text">Popular Movies</string>
    <string name="play_icon">Play icon</string>
    <string name="trailer">Preview</string>
    <string name="reviews">Reviews</string>
    <string name="no_connection">Please get a connection.</string>
    <string name="no_fav">You have no favorites</string>

    <string-array name="load_array">
        <item>Popular</item>
        <item>Top Rated</item>
        <item>Favorites</item>
    </string-array>
</resources>
