<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="75dp"
        tools:context="com.plasius.popularmovies.DetailActivity">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:background="@color/colorPrimary"
            app:titleTextColor="@color/colorPrimaryText"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/popular_movies_text"/>


        </android.support.v7.widget.Toolbar>

        <ImageView
            android:id="@+id/detail_iv"
            android:layout_width="160dp"
            android:layout_height="240dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/poster_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:srcCompat="@color/colorPrimary" />

        <TextView
            android:id="@+id/detail_title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/title_text"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@+id/detail_iv"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/detail_rating_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/rating_text"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@+id/detail_iv"
            app:layout_constraintTop_toBottomOf="@+id/detail_title_tv" />

        <TextView
            android:id="@+id/detail_release_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/released_text"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@+id/detail_iv"
            app:layout_constraintTop_toBottomOf="@+id/detail_rating_tv" />

        <TextView
            android:id="@+id/detail_overview_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/synopsis_text"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_iv" />

        <TextView
            android:id="@+id/detail_title_tv"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/loading_text"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/detail_iv"
            app:layout_constraintTop_toBottomOf="@+id/detail_title_label" />

        <TextView
            android:id="@+id/detail_rating_tv"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/loading_text"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/detail_iv"
            app:layout_constraintTop_toBottomOf="@+id/detail_rating_label" />

        <TextView
            android:id="@+id/detail_release_tv"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/loading_text"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/detail_iv"
            app:layout_constraintTop_toBottomOf="@+id/detail_release_label" />

        <TextView
            android:id="@+id/detail_overview_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/loading_text"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_overview_label" />


    </android.support.constraint.ConstraintLayout>


</ScrollView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_favorite_black_48dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>